--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Application Form</title>
-    <link rel="stylesheet" href="C:\Users\psychedelic\Documents\html css\Application form site\css\style.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
     <div class="main">
